--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
@@ -49,12 +50,15 @@
     "react-native": "0.79.5",
     "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.7.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-switch-pro": "^1.0.5",
+    "react-native-switch-toggles": "^1.0.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
